5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1798_2563.log
== TEST (2019-06-05 14:38:43) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1)
ap = 0

for i in range(size(m)):
	if(m[i]>=5 and <7):
		ap = ap+1
	print(ap)
		
	
	


-- ERROR:
File "XXXX", line 3
    while(size(m)>1)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:42:42) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] >7):
			ap = ap+1
		print(ap)
			
		
	
		
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:44:18) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] >7):
			ap = ap+1
		print(ap)
			
		
	
		
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:44:59) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] >7):
			ap = ap+1
		print(ap)
			
		
	
		
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:45:31) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] >7):
			ap = ap+1
		print(ap)
			
		
	
		
	
	


-- EXECUTION TIME:
25.6339
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:45:31) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] >7):
			ap = ap+1
		print(ap)
			
		
	
		
	
	


-- EXECUTION TIME:
69.9627
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
OCI runtime exec failed: exec failed: container_linux.go:296: starting container process caused "process_linux.go:86: executing setns process caused \"exit status 21\"": unknown
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:45:31) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] >7):
			ap = ap+1
		print(ap)
			
		
	
		
	
	


-- EXECUTION TIME:
90.3407
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
Media: 0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:

-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:46:20) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] >7):
			ap = ap+1
		print(ap)
			
		
	
		
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:47:14) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] >7):
			ap = ap+1
		print(ap)
		m = array(eval(input("Media: ")))
		
			
		
	
		
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:47:27) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] >7):
			ap = ap+1
		print(ap)
		m = array(eval(input("Media: ")))
		
			
		
	
		
	
	


-- EXECUTION TIME:
2.76262
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2563/main.py", line 6, in <module>
    if(m[i]>=5 and m[i] >7):
IndexError: index 4 is out of bounds for axis 0 with size 1

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:47:49) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] >7):
			ap = ap+1
		print(ap)
		m = array(eval(input("Media: ")))
		
			
		
	
		
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:49:47) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] >7):
			ap = ap+1
		print(ap)
		m = array(eval(input("Media: ")))
		
		
	
	
		
			
		
	
		
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:49:57) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] >7):
			ap = ap+1
		print(ap)
		m = array(eval(input("Media: ")))
		
		
	
	
		
			
		
	
		
	
	


-- EXECUTION TIME:
2.50348
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2563/main.py", line 6, in <module>
    if(m[i]>=5 and m[i] >7):
IndexError: index 4 is out of bounds for axis 0 with size 1

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:50:11) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] <7):
			ap = ap+1
		print(ap)
		m = array(eval(input("Media: ")))
		
		
	
	
		
			
		
	
		
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:50:22) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] <7):
			ap = ap+1
		print(ap)
		m = array(eval(input("Media: ")))
		
		
	
	
		
			
		
	
		
	
	


-- EXECUTION TIME:
3.51088
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2563/main.py", line 6, in <module>
    if(m[i]>=5 and m[i] <7):
IndexError: index 4 is out of bounds for axis 0 with size 1

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:50:31) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] <7):
			ap = ap+1
		print(ap)
		m = array(eval(input("Media: ")))
		
		
	
	
		
			
		
	
		
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:50:37) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] <7):
			ap = ap+1
		print(ap)
		m = array(eval(input("Media: ")))
		
		
	
	
		
			
		
	
		
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:50:44) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] <7):
			ap = ap+1
		print(ap)
		m = array(eval(input("Media: ")))
		
		
	
	
		
			
		
	
		
	
	


-- EXECUTION TIME:
3.04925
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2563/main.py", line 6, in <module>
    if(m[i]>=5 and m[i] <7):
IndexError: index 4 is out of bounds for axis 0 with size 1

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:51:08) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] <7):
			ap = ap+1
		print(ap)
		m = array(eval(input("Media: ")))
		
		
	
	
		
			
		
	
		
	
	


-- EXECUTION TIME:
2.39659
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2563/main.py", line 6, in <module>
    if(m[i]>=5 and m[i] <7):
IndexError: index 4 is out of bounds for axis 0 with size 1

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:51:45) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] <7):
			ap = ap+1
	print(ap)
	m = array(eval(input("Media: ")))
		
		
	
	
		
			
		
	
		
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:51:55) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] <7):
			ap = ap+1
	print(ap)
	m = array(eval(input("Media: ")))
		
		
	
	
		
			
		
	
		
	
	


-- EXECUTION TIME:
2.4853
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:53:04) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] >7):
			ap = ap+1
		print(ap)
			
		
	
		
	
	


-- EXECUTION TIME:
398.185
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 12:46:31) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] <7):
			ap = ap+1
	print(ap)
	m = array(eval(input("Media: ")))
		
		
	
	
		
			
		
	
		
	
	


-- EXECUTION TIME:
0.980066
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 13:12:55) 
-- CODE:
from numpy import*
m = array(eval(input("Media: ")))
while(size(m)>1):
	ap = 0
	for i in range(size(m)):
		if(m[i]>=5 and m[i] <7):
			ap = ap+1
	print(ap)
	m = array(eval(input("Media: ")))
		
		
	
	
		
			
		
	
		
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
